implement feature more screen show account details
